# behavioral-sensing-research

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml
benchmarking/: benchmarks.py
docs/: api.rst  architecture.rst  background.rst  clinical_examples.rst  conf.py  contributing.rst  index.rst  modules.rst  requirements.txt  roadmap.rst  usage.rst
docs/tutorials/: quickstart.ipynb
sensor_modeling/: __init__.py  cli.py
sensor_modeling/analysis/: __init__.py  behavioral_analysis.py  behavioral_metrics.py  comparison.py  dependency_network.py  granger_causality.py  pipeline.py  reporting.py
sensor_modeling/change_point/: __init__.py  adaptive_normalization.py  embedding_cpd.py  energy_efficient.py  genetic_optimization.py
sensor_modeling/data/: __init__.py  loaders.py  preprocessing.py  synthetic.py  validation.py
sensor_modeling/examples/: __init__.py
sensor_modeling/examples/demos/: __init__.py  bernoulli_ar_demo.py  cpd_ar_demo.py  cpd_benchmark.py  hmm_granger_demo.py  nhpp_pelt_demo.py
sensor_modeling/examples/tutorials/: __init__.py
sensor_modeling/hmm/: __init__.py  adaptive_hmm.py  base.py  circadian_hmm.py  heterogeneous_hmm.py  hierarchical_hmm.py  scaled_dirichlet_hmm.py
sensor_modeling/models/: __init__.py
sensor_modeling/models/bernoulli_ar/: __init__.py  base_model.py  multivariate_model.py
sensor_modeling/models/change_point_detection/: __init__.py  deep.py  pelt.py
sensor_modeling/models/nhpp_pelt/: __init__.py  bspline.py  cli.py  diagnostics.py  io.py  model.py  optimizer.py  plotting.py  quad.py  regularization.py  utils.py
sensor_modeling/utils/: __init__.py  data_io.py  logging_config.py  missing.py  plotting.py  validation.py
sensor_modeling/visualization/: __init__.py  clinical.py  interactive.py  research.py  web_app.py
tests/: test_analysis_framework.py  test_change_point_algorithms.py  test_data_pipeline.py  test_deep_cpd.py  test_hmm_models.py  test_missing_data.py  test_nhpp_utils.py  test_pelt_cpd.py  test_visualization.py  test_web_app_security.py
tests/integration/: test_cli_integration.py
tests/performance/: test_benchmark_runtime.py
tests/property/: test_simulation_properties.py
